update localization Italian

--- a/Prevu.Localization/Properties/Resources.it.resx
+++ b/Prevu.Localization/Properties/Resources.it.resx
@@ -3523,16 +3523,16 @@
     <value>Prima separazione - Palette</value>
   </data>
   <data name="FIRST SEPARATION - TOP GATE" xml:space="preserve">
-    <value>Prima separazione - Cancello Superiore</value>
+    <value>Prima separazione - Valvola Superiore</value>
   </data>
   <data name="FIRST SEPARATION - BOTTOM GATE" xml:space="preserve">
-    <value>Prima separazione - Cancello Inferiore</value>
+    <value>Prima separazione - Valvola Inferiore</value>
   </data>
   <data name="FIRST SEPARATION TANK - LEVEL" xml:space="preserve">
     <value>Prima vasca di separazione - Livello</value>
   </data>
   <data name="FIRST SEPARATION TANK - CYCLE" xml:space="preserve">
-    <value>Prima vasca di separazione - ciclo</value>
+    <value>Prima vasca di separazione - Ciclo</value>
   </data>
   <data name="GRINDER - MAIN MOTOR" xml:space="preserve">
     <value>Mulino - motore principale</value>
@@ -3664,10 +3664,10 @@
     <value>Reattore di lavaggio - ciclo</value>
   </data>
   <data name="SEPARATION TANK - BOTTOM SCREW" xml:space="preserve">
-    <value>Vasca di separazione - vite inferiore</value>
+    <value>Vasca di separazione - Coclea inferiore</value>
   </data>
   <data name="SEPARATION TANK - LEVEL" xml:space="preserve">
-    <value>Vasca di separazione - livello</value>
+    <value>Vasca di separazione - Livello</value>
   </data>
   <data name="SEPARATION TANK - DISCHARGE PUMP" xml:space="preserve">
     <value>Vasca di separazione - pompa di scarico</value>
@@ -5200,25 +5200,25 @@
     <value>Vasca di separazione - Gestione Palette</value>
   </data>
   <data name="SEPARATION TANK PADDLES" xml:space="preserve">
-    <value>Palette della Vasca di separazione</value>
+    <value>Vasca di separazione - Palette</value>
   </data>
   <data name="SEPARATION TANK - DISTRIBUTOR" xml:space="preserve">
-    <value>Vasca di separazione - distributore</value>
+    <value>Vasca di separazione - Distributore</value>
   </data>
   <data name="SEPARATION TANK - DISTRIBUTOR MANAGER" xml:space="preserve">
     <value>Vasca di separazione - Gestione Distributori</value>
   </data>
   <data name="SEPARATION TANK DISTRIBUTORS" xml:space="preserve">
-    <value>Distributori della Vasca di separazione </value>
+    <value>Vasca di separazione - Distributori</value>
   </data>
   <data name="SEPARATION TANK - TOP GATE" xml:space="preserve">
-    <value>Vasca di separazione - Cancello superiore</value>
+    <value>Vasca di separazione - Valvola superiore</value>
   </data>
   <data name="SEPARATION TANK - BOTTOM GATE" xml:space="preserve">
-    <value>Vasca di separazione - Cancello Inferiore</value>
+    <value>Vasca di separazione - Valvola Inferiore</value>
   </data>
   <data name="SEPARATION TANK - DISCHARGE CYCLE" xml:space="preserve">
-    <value>Vasca di separazione - ciclo di scarico</value>
+    <value>Vasca di separazione - Ciclo di scarico</value>
   </data>
   <data name="CLOSE LOWER VALVE" xml:space="preserve">
     <value>Chiudi la valvola inferiore</value>
@@ -5302,7 +5302,7 @@
     <value>Avvia i distributori uno per uno in modalità di manutenzione</value>
   </data>
   <data name="SEPARATION TANK - DISCHARGE" xml:space="preserve">
-    <value>Vasca di separazione - scarico</value>
+    <value>Vasca di separazione - Scarico</value>
   </data>
   <data name="SEPARATION TANK LEVEL" xml:space="preserve">
     <value>Livello della Vasca di separazione</value>
@@ -7483,13 +7483,13 @@
     <value>Agitatore del reattore di lavaggio</value>
   </data>
   <data name="SEPARATION TANK PADDLE" xml:space="preserve">
-    <value>Palletta della Vasca di separazione</value>
+    <value>Vasca di separazione - Palletta</value>
   </data>
   <data name="SEPARATION TANK PADDLES MANAGER" xml:space="preserve">
-    <value>Gestore delle palette della Vasca di separazione</value>
+    <value>Vasca di separazione - Gestore palette</value>
   </data>
   <data name="SEPARATION TANK PADDLES VIEW" xml:space="preserve">
-    <value>Vista palette della Vasca di separazione</value>
+    <value>Vasca di separazione - Vista palette</value>
   </data>
   <data name="DISCHARGE PUMP" xml:space="preserve">
     <value>Pompa di scarico</value>
@@ -8347,7 +8347,7 @@
     <value>Dettaglio Valvole Pulizia</value>
   </data>
   <data name="SEPARATION TANK SCREW CONVEYOR" xml:space="preserve">
-    <value>Trasportatore a coclea con serbatoio di separazione</value>
+    <value>Vasca di separazione - Coclea</value>
   </data>
   <data name="LEVEL OK FOR RUN" xml:space="preserve">
     <value>Livello ok per la corsa</value>
@@ -8800,7 +8800,7 @@
     <value>Arresta il ritardo del materiale a monte dopo il max. Livello</value>
   </data>
   <data name="SEPARATION TANK - MATERIAL LEVEL" xml:space="preserve">
-    <value>Serbatoio di separazione - Livello del materiale</value>
+    <value>Vasca di separazione - Livello del materiale</value>
   </data>
   <data name="LONG START RAMP TIME" xml:space="preserve">
     <value>Tempo di rampa di avvio lungo</value>
@@ -9022,16 +9022,16 @@
     <value>WCE Pulizia a vapore</value>
   </data>
   <data name="SEPARATION TANK TOP DISCHARGE PUMP" xml:space="preserve">
-    <value>Pompa di scarico superiore del serbatoio di separazione</value>
+    <value>Vasca di separazione - Pompa scarico superiore</value>
   </data>
   <data name="SEPARATION TANK TOP PUMP GATE" xml:space="preserve">
-    <value>Cancello della pompa superiore del serbatoio di separazione</value>
+    <value>Vasca di separazione - Valvola pompa superiore</value>
   </data>
   <data name="SEPARATION TANK BOTTOM DISCHARGE PUMP" xml:space="preserve">
-    <value>Pompa di scarico inferiore del serbatoio di separazione</value>
+    <value>Vasca di separazione - Pompa scarico inferiore</value>
   </data>
   <data name="SEPARATION TANK BOTTOM PUMP GATE" xml:space="preserve">
-    <value>Cancello della pompa di fondo del serbatoio di separazione</value>
+    <value>Vasca di separazione - Valvola pompa inferiore</value>
   </data>
   <data name="WATER TANK WATER PUMP TO 420" xml:space="preserve">
     <value>Pompa dell'acqua del serbatoio dell'acqua fino a 420</value>
