update localization Italian

--- a/Prevu.Localization/Properties/Resources.it.resx
+++ b/Prevu.Localization/Properties/Resources.it.resx
@@ -445,7 +445,7 @@
     <value>Spento</value>
   </data>
   <data name="ON" xml:space="preserve">
-    <value>Acceso</value>
+    <value>ON</value>
   </data>
   <data name="ACTIVE EVENTS" xml:space="preserve">
     <value>Eventi Attuali</value>
@@ -1504,7 +1504,7 @@
     <value>Visualizzazione allarmi</value>
   </data>
   <data name="ENABLE HIGH RESTART SPEED" xml:space="preserve">
-    <value>Abilita alta velocità di riavvio</value>
+    <value>Abilita velocità di riavvio alta</value>
   </data>
   <data name="ENABLE SEMIAUTO PUMPING MODE" xml:space="preserve">
     <value>Abilita la modalità di pompaggio semiautomatica</value>
@@ -2047,7 +2047,7 @@
     <value>Comando Grasso ON</value>
   </data>
   <data name="READY TO START" xml:space="preserve">
-    <value>Pronto per Avviare</value>
+    <value>Pronto per l'avvio</value>
   </data>
   <data name="FULL RUNNING (OK FOR PROCESS)" xml:space="preserve">
     <value>Esecuzione completa (ok per processo)</value>
@@ -2092,7 +2092,7 @@
     <value>Uscita esterna</value>
   </data>
   <data name="(1=START REQUEST)" xml:space="preserve">
-    <value>(1=Avvia richiesta)</value>
+    <value>(1=Richiesta Avio)</value>
   </data>
   <data name="DEBALER START REQUEST CONFIRM" xml:space="preserve">
     <value>Conferma richiesta avvio Disimballatrice</value>
@@ -2452,7 +2452,7 @@
     <value>Nascondi Pulsante Start Su Hmi (Falso=Mostra Pulsante Avvio)</value>
   </data>
   <data name="READY TO START  (FALSE WHEN STARTED)" xml:space="preserve">
-    <value>Pronto Per Iniziare (Falso Quando Avviato)</value>
+    <value>Pronto per l'avvio (Falso Quando Avviato)</value>
   </data>
   <data name="HYDRAULIC SAFETY" xml:space="preserve">
     <value>Sicurezza Idraulica</value>
@@ -2806,7 +2806,7 @@
     <value>A Valle vicino Non Adatto Per La Triturazione</value>
   </data>
   <data name="FAR DOWNSTREAM OK FOR START WASHING" xml:space="preserve">
-    <value>A Valle lontano Ok Per Iniziare Il Lavaggio</value>
+    <value>A Valle lontano Ok Per Iniziare il Lavaggio</value>
   </data>
   <data name="FAR DOWNSTREAM NOT OK FOR SHREDDING" xml:space="preserve">
     <value>A Valle lontano Non Va Bene Per La Triturazione</value>
@@ -3190,7 +3190,7 @@
     <value>Richiesta di avvio del motore locale</value>
   </data>
   <data name="(1=START)" xml:space="preserve">
-    <value>(1 = avvio)</value>
+    <value>(1 = Avvio)</value>
   </data>
   <data name="LOCAL MOTOR STOP REQUEST" xml:space="preserve">
     <value>Richiesta di arresto del motore locale</value>
@@ -3379,7 +3379,7 @@
     <value>Additivo</value>
   </data>
   <data name="FLAKES SORTING" xml:space="preserve">
-    <value>Smistamento dei fiocchi</value>
+    <value>Smistamento dei scaglie</value>
   </data>
   <data name="MACHINES EXHAUST" xml:space="preserve">
     <value>Scarichi macchine</value>
@@ -5245,13 +5245,13 @@
     <value>Portata Bassa</value>
   </data>
   <data name="LOCAL START FORWARD" xml:space="preserve">
-    <value>Avanti Avvio locale</value>
+    <value>Avvio locale Avanti</value>
   </data>
   <data name="(1=FWD)" xml:space="preserve">
     <value>(1 = FWD)</value>
   </data>
   <data name="LOCAL START REVERSE" xml:space="preserve">
-    <value>Inversione Avvio Locale</value>
+    <value>Avvio Locale Indietro</value>
   </data>
   <data name="(1=REV)" xml:space="preserve">
     <value>(1 = Rev)</value>
@@ -6214,7 +6214,7 @@
     <value>ELUTRIAZIONE</value>
   </data>
   <data name="FLAKE SORT" xml:space="preserve">
-    <value>Selezione fiocchi</value>
+    <value>Selezione scaglie</value>
   </data>
   <data name="CHARGING CONVEYOR" xml:space="preserve">
     <value>Trasportatore di caricamento</value>
@@ -7789,7 +7789,7 @@
     <value>Riempi e scarica insieme</value>
   </data>
   <data name="TOMRA FLAKES SORTER" xml:space="preserve">
-    <value>TOMRA Selezionatore fiocchi</value>
+    <value>TOMRA Selezionatore scaglie</value>
   </data>
   <data name="LOW TEMPERATURE" xml:space="preserve">
     <value>Bassa temperatura</value>
@@ -8449,7 +8449,7 @@
     <value>Procedura di manutenzione della smerigliatrice a secco</value>
   </data>
   <data name="BUHLER FLAKES SORTER MAIN START" xml:space="preserve">
-    <value>Inizio principale del selezionatore di fiocchi Buhler</value>
+    <value>Avvio principale del selezionatore di scaglie Buhler</value>
   </data>
   <data name="NO FAULT PRESENT" xml:space="preserve">
     <value>Nessun guasto presente</value>
@@ -8479,10 +8479,10 @@
     <value>Non bypassato</value>
   </data>
   <data name="BUHLER FLAKES SORTER MAIN STREAM START" xml:space="preserve">
-    <value>Inizio del flusso principale del selezionatore di fiocchi Buhler</value>
+    <value>Inizio del flusso principale del selezionatore di scaglie Buhler</value>
   </data>
   <data name="BUHLER FLAKES SORTER RECOVERY START" xml:space="preserve">
-    <value>Inizio del recupero della selezionatrice di fiocchi Buhler</value>
+    <value>Inizio del recupero della selezionatrice di scaglie Buhler</value>
   </data>
   <data name="MAXIMUM LEVEL OF SECONDARY MATERIAL" xml:space="preserve">
     <value>Livello massimo di materiale secondario</value>
