update localization italian

--- a/Prevu.Localization/Properties/Resources.it.resx
+++ b/Prevu.Localization/Properties/Resources.it.resx
@@ -223,7 +223,7 @@
     <value>Registrati</value>
   </data>
   <data name="ACTIVE" xml:space="preserve">
-    <value>Attivi</value>
+    <value>Attivo</value>
   </data>
   <data name="PRODUCTION" xml:space="preserve">
     <value>Produzione</value>
