--- a/Prevu.Localization/Properties/Resources.ar.resx
+++ b/Prevu.Localization/Properties/Resources.ar.resx
@@ -9294,4 +9294,13 @@
   <data name="INFO_SYS_35" xml:space="preserve">
     <value>تحقق من كابل Profinet والموصلات ووحدة إمداد الطاقة بوحدة الاتصال</value>
   </data>
+  <data name="M_INFO_SORTER_NOT_IN_AUTO" xml:space="preserve">
+    <value>تحقق من فارز محليًا وضعه في الوضع التلقائي</value>
+  </data>
+  <data name="M_INFO_CHANGE_MATERIAL" xml:space="preserve">
+    <value>تكوين المصنع يتغير. انتظر حتى يصل الجهاز المعني إلى موقعه الجديد</value>
+  </data>
+  <data name="M_INFO_FILLING_DISAB" xml:space="preserve">
+    <value>تمكين التعبئة للإنتاج من خلال إعدادات HMI</value>
+  </data>
 </root>
