--- a/Prevu.Localization/Properties/Resources.de.resx
+++ b/Prevu.Localization/Properties/Resources.de.resx
@@ -9294,4 +9294,13 @@
   <data name="INFO_SYS_35" xml:space="preserve">
     <value>Überprüfen Sie das Profinet-Kabel, die Anschlüsse und die Stromversorgung des Kommunikationsmoduls</value>
   </data>
+  <data name="M_INFO_SORTER_NOT_IN_AUTO" xml:space="preserve">
+    <value>Überprüfen Sie den Sortierer vor Ort und versetzen Sie ihn in den automatischen Modus</value>
+  </data>
+  <data name="M_INFO_CHANGE_MATERIAL" xml:space="preserve">
+    <value>Die Anlagenkonfiguration ändert sich. Warten Sie, bis alle beteiligten Geräte ihre neue Position erreicht haben</value>
+  </data>
+  <data name="M_INFO_FILLING_DISAB" xml:space="preserve">
+    <value>Aktivieren Sie die Abfüllung für die Produktion über die HMI-Einstellungen</value>
+  </data>
 </root>
