--- a/Prevu.Localization/Properties/Resources.es.resx
+++ b/Prevu.Localization/Properties/Resources.es.resx
@@ -9295,4 +9295,13 @@
   <data name="INFO_SYS_35" xml:space="preserve">
     <value>Verifique el cable Profinet, los conectores y la fuente de alimentación del módulo de comunicación</value>
   </data>
+  <data name="M_INFO_SORTER_NOT_IN_AUTO" xml:space="preserve">
+    <value>Verifique el clasificador localmente y póngalo en modo automático</value>
+  </data>
+  <data name="M_INFO_CHANGE_MATERIAL" xml:space="preserve">
+    <value>La configuración de la planta está cambiando. Espere a que todos los dispositivos involucrados hayan alcanzado su nueva posición</value>
+  </data>
+  <data name="M_INFO_FILLING_DISAB" xml:space="preserve">
+    <value>Habilite el llenado para producción a través de la configuración de HMI</value>
+  </data>
 </root>
