--- a/Prevu.Localization/Properties/Resources.he.resx
+++ b/Prevu.Localization/Properties/Resources.he.resx
@@ -9294,4 +9294,13 @@
   <data name="INFO_SYS_35" xml:space="preserve">
     <value>בדוק את אספקת הכוח של כבל, מחברים ומודול תקשורת של Profinet</value>
   </data>
+  <data name="M_INFO_SORTER_NOT_IN_AUTO" xml:space="preserve">
+    <value>בדוק את סדרן מקומי והכנס אותו למצב אוטומטי</value>
+  </data>
+  <data name="M_INFO_CHANGE_MATERIAL" xml:space="preserve">
+    <value>תצורת המפעל משתנה. המתן לכל המכשירים המעורבים הגיעו לעמדה החדשה שלהם</value>
+  </data>
+  <data name="M_INFO_FILLING_DISAB" xml:space="preserve">
+    <value>אפשר מילוי לייצור דרך הגדרות HMI</value>
+  </data>
 </root>
