--- a/Prevu.Localization/Properties/Resources.it.resx
+++ b/Prevu.Localization/Properties/Resources.it.resx
@@ -9294,4 +9294,13 @@
   <data name="INFO_SYS_35" xml:space="preserve">
     <value>Controllare cavo, connettori e alimentazione del modulo di comunicazione Profinet</value>
   </data>
+  <data name="M_INFO_SORTER_NOT_IN_AUTO" xml:space="preserve">
+    <value>Controlla il sorter localmente e mettilo in modalità automatica</value>
+  </data>
+  <data name="M_INFO_CHANGE_MATERIAL" xml:space="preserve">
+    <value>La configurazione dell'impianto sta cambiando. Attendere che tutti i dispositivi coinvolti abbiano raggiunto la loro nuova posizione</value>
+  </data>
+  <data name="M_INFO_FILLING_DISAB" xml:space="preserve">
+    <value>Abilita il riempimento per la produzione tramite le impostazioni HMI</value>
+  </data>
 </root>
