--- a/Prevu.Localization/Properties/Resources.pt.resx
+++ b/Prevu.Localization/Properties/Resources.pt.resx
@@ -9294,4 +9294,13 @@
   <data name="INFO_SYS_35" xml:space="preserve">
     <value>Verifique o cabo Profinet, os conectores e a fonte de alimentação do módulo de comunicação</value>
   </data>
+  <data name="M_INFO_SORTER_NOT_IN_AUTO" xml:space="preserve">
+    <value>Verifique o classificador localmente e coloque-o no modo automático</value>
+  </data>
+  <data name="M_INFO_CHANGE_MATERIAL" xml:space="preserve">
+    <value>A configuração da planta está mudando. Aguarde até que todos os dispositivos envolvidos alcancem sua nova posição</value>
+  </data>
+  <data name="M_INFO_FILLING_DISAB" xml:space="preserve">
+    <value>Habilitar preenchimento para produção por meio de configurações de IHM</value>
+  </data>
 </root>
