--- a/Prevu.Localization/Properties/Resources.resx
+++ b/Prevu.Localization/Properties/Resources.resx
@@ -9648,4 +9648,16 @@
     <value>Check Profinet Cable, Connectors And Communication Module Power Supply</value>
     <comment>InfoText Fault</comment>
   </data>
+  <data name="M_INFO_SORTER_NOT_IN_AUTO" xml:space="preserve">
+    <value>Check Sorter Locally And Put It In Auto Mode</value>
+    <comment>InfoText Message</comment>
+  </data>
+  <data name="M_INFO_CHANGE_MATERIAL" xml:space="preserve">
+    <value>Plant Configuration Is Changing. Wait For All The Involved Device Has Reached Their New Position</value>
+    <comment>InfoText Message</comment>
+  </data>
+  <data name="M_INFO_FILLING_DISAB" xml:space="preserve">
+    <value>Enable Filling For Production Through HMI Settings</value>
+    <comment>InfoText Message</comment>
+  </data>
 </root>
