--- a/Prevu.Localization/Properties/Resources.ro.resx
+++ b/Prevu.Localization/Properties/Resources.ro.resx
@@ -9294,4 +9294,13 @@
   <data name="INFO_SYS_35" xml:space="preserve">
     <value>Verificați cablul, conectorii și sursa de alimentare a modulului de comunicație Profinet</value>
   </data>
+  <data name="M_INFO_SORTER_NOT_IN_AUTO" xml:space="preserve">
+    <value>Verificați sortatorul local și puneți-l în modul automat</value>
+  </data>
+  <data name="M_INFO_CHANGE_MATERIAL" xml:space="preserve">
+    <value>Configurația instalației se schimbă. Așteptați ca toate dispozitivele implicate au ajuns în noua poziție</value>
+  </data>
+  <data name="M_INFO_FILLING_DISAB" xml:space="preserve">
+    <value>Activați umplerea pentru producție prin setări HMI</value>
+  </data>
 </root>
