--- a/Prevu.Localization/Properties/Resources.zh.resx
+++ b/Prevu.Localization/Properties/Resources.zh.resx
@@ -9294,4 +9294,13 @@
   <data name="INFO_SYS_35" xml:space="preserve">
     <value>检查 Profinet 电缆、连接器和通信模块电源</value>
   </data>
+  <data name="M_INFO_SORTER_NOT_IN_AUTO" xml:space="preserve">
+    <value>本地检查分拣机并将其置于自动模式</value>
+  </data>
+  <data name="M_INFO_CHANGE_MATERIAL" xml:space="preserve">
+    <value>工厂配置正在发生变化。等待所有相关设备都到达新位置</value>
+  </data>
+  <data name="M_INFO_FILLING_DISAB" xml:space="preserve">
+    <value>通过 HMI 设置启用生产灌装</value>
+  </data>
 </root>
